--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
+  <!--
   <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16.png">
+  -->
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -164,7 +166,7 @@
           
             <div class="project-actions">              
               <a href="/demos/kindertreff/projekt-kindertreff-demo.html" class="btn">Demo öffnen</a>
-              <a href="projects/kindertreff-info.html" class="btn btn-secondary">Projekt ansehen</a>
+              <a href="/projects/kindertreff-info.html" class="btn btn-secondary">Projekt ansehen</a>
             </div>
           </div>
         </article>
@@ -197,7 +199,7 @@
 
             <div class="project-actions">
               <a href="/demos/fotosharing/projekt-fotosharing-demo.html" class="btn">Demo öffnen</a>
-              <a href="projects/fotosharing-info.html" class="btn btn-secondary">Projekt ansehen</a>
+              <a href="/projects/fotosharing-info.html" class="btn btn-secondary">Projekt ansehen</a>
             </div>
           </div>
         </article>
@@ -237,7 +239,7 @@
           
             <div class="project-actions">
               <a href="/demos/simpledoc/projekt-simpledoc-demo.html" class="btn">Demo öffnen</a>
-              <a href="projects/simpleDoc-info.html" class="btn btn-secondary">Projekt ansehen</a>
+              <a href="/projects/simpleDoc-info.html" class="btn btn-secondary">Projekt ansehen</a>
             </div>
               </div>
         </article>
@@ -292,7 +294,7 @@
         <div class="projekt-media">
           <img
             loading="lazy"
-            src="assets/img/lernprogramm-bachelor.png"
+            src="/assets/img/lernprogramm-bachelor.png"
             alt="Screenshot des Lernprogramms zur Vorbereitung auf den Basispass Pferdekunde"
             class="projekt-bild"
           />
@@ -343,7 +345,7 @@
         <div class="projekt-media">
           <img
             loading="lazy"
-            src="assets/img/read-and-go.png
+            src="/assets/img/read-and-go.png
             alt="Screenshot des Read-and-Go Fachlernspiels"
             class="projekt-bild klein"
           />
@@ -412,7 +414,7 @@
   </nav>
 </footer>
 
-  <script src="assets/js/script.js"></script>
+  <script src="/assets/js/script.js"></script>
 
 </body>
 </html>
