Impressum und Datenschutz Link reparieren

--- a/index.html
+++ b/index.html
@@ -409,8 +409,8 @@
   <nav aria-label="Footer-Navigation">
     <a href="#home">Start</a> ·
     <a href="#kontakt">Kontakt</a> ·
-    <a href="impressum.html">Impressum</a> ·
-    <a href="datenschutz.html">Datenschutz</a>
+    <a href="/impressum.html">Impressum</a> ·
+    <a href="/datenschutz.html">Datenschutz</a>
   </nav>
 </footer>
 
