--- a/projects/simpleDoc-info.html
+++ b/projects/simpleDoc-info.html
@@ -82,7 +82,7 @@
     </article>
 
         <div class="back-wrapper">
-          <a href="../index.html" class="back-button">
+          <a href="../index.html#portfolio" class="back-button">
             ← Zurück zu den Projekten
           </a>
         </div>
