--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  <!--
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon-32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon-16.png">
-  -->
+  <link rel="icon" href="/assets/img/favicon.ico">
+  <link rel="icon" type="image/svg+xml" href="/assets/img/favicon.svg">
+  <link rel="apple-touch-icon" href="/assets/img/apple-touch-icon.png">
+  <link rel="manifest" href="/assets/img/site.webmanifest">
+
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -345,7 +346,7 @@
         <div class="projekt-media">
           <img
             loading="lazy"
-            src="/assets/img/read-and-go.png
+            src="/assets/img/read-and-go.png"
             alt="Screenshot des Read-and-Go Fachlernspiels"
             class="projekt-bild klein"
           />
