--- a/demos/simpledoc/projekt-simpledoc-demo.html
+++ b/demos/simpledoc/projekt-simpledoc-demo.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
+<link rel="icon" href="/assets/img/favicon.ico">
+  <link rel="icon" type="image/svg+xml" href="/assets/img/favicon.svg">
+  <link rel="apple-touch-icon" href="/assets/img/apple-touch-icon.png">
+  <link rel="manifest" href="/assets/img/site.webmanifest">
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="robots" content="noindex, nofollow">
