--- a/demos/kindertreff/projekt-kindertreff-demo.html
+++ b/demos/kindertreff/projekt-kindertreff-demo.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/assets/img/favicon.svg">
   <link rel="apple-touch-icon" href="/assets/img/apple-touch-icon.png">
   <link rel="manifest" href="/assets/img/site.webmanifest">
-  
+
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="robots" content="noindex, nofollow">
@@ -28,6 +28,9 @@ Alle sehen die Termine der aktuellen Woche. <br>
 </p>
 
 <main>
+  <nav class="demo-topbar" aria-label="Demo Navigation">
+  <a class="demo-back" href="/#portfolio">← Zurück zu den Projekten</a>
+</nav>
 <section>
 <h2>Neue Verfügbarkeit</h2>
 <div class="card">
@@ -76,6 +79,8 @@ Daten werden zentral gespeichert und automatisch nach Ablauf gelöscht. Eigene E
 
 <script src="https://unpkg.com/pocketbase/dist/pocketbase.umd.js"></script>
 <script src="/demos/kindertreff/kindertreff.js"></script>
+<script type="module" src="/demos/fotosharing/fotosharing.js"></script>
+
 
 </body>
 </html>
