--- a/demos/simpledoc/projekt-simpledoc-demo.html
+++ b/demos/simpledoc/projekt-simpledoc-demo.html
@@ -19,6 +19,9 @@
 <body>
 
   <main class="container">
+    <nav class="demo-topbar" aria-label="Demo Navigation">
+  <a class="demo-back" href="/#portfolio">← Zurück zu den Projekten</a>
+</nav>
     <h1>SimpleDoc</h1>
     <p class="hint">Geführte Kurznotizen für den Praxisalltag (Demo-Version)</p>
 
@@ -99,6 +102,8 @@
     </main>
 
     <script src="/demos/simpledoc/simpledoc.js"></script>
+    <script type="module" src="/demos/fotosharing/fotosharing.js"></script>
+
   
   </body>
 </html>
