Fehler in index.html entfernt

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
 <link rel="manifest" href="/assets/img/site.webmanifest">
 <link rel="mask-icon" href="/assets/img/favicon.svg" color="#2563eb">
-<meta name="theme-color" content="#ffffff">0000
+<meta name="theme-color" content="#ffffff">
 
 
   <meta charset="UTF-8">
