--- a/demos/fotosharing/projekt-fotosharing-demo.html
+++ b/demos/fotosharing/projekt-fotosharing-demo.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
+  <meta charset="UTF-8">
+  <title>Foto-Demo – Login & Upload</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="robots" content="noindex, nofollow">
 
   <link rel="icon" href="/assets/img/favicon.ico">
   <link rel="icon" type="image/svg+xml" href="/assets/img/favicon.svg">
   <link rel="apple-touch-icon" href="/assets/img/apple-touch-icon.png">
   <link rel="manifest" href="/assets/img/site.webmanifest">
 
-  <meta charset="UTF-8">
-  <title>Foto-Demo – Login & Upload</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="robots" content="noindex, nofollow">
-
   <link rel="stylesheet" href="/assets/css/tokens.css">
   <link rel="stylesheet" href="/assets/css/demo.css">
 </head>
 
 <body>
-  <main class="container">   
-<nav class="demo-topbar" aria-label="Demo Navigation">
-  <a class="demo-back" href="/#portfolio">← Zurück zu den Projekten</a>
-</nav>
+  <main class="container">
+
+    <nav class="demo-topbar" aria-label="Demo Navigation">
+      <a class="demo-back" href="/#portfolio">← Zurück zu den Projekten</a>
+    </nav>
+
     <h1>📸 Foto-Sharing Demo</h1>
 
     <!-- LOGIN / REGISTER -->
@@ -36,8 +37,9 @@
       <div class="btn-row">
         <button id="btnLogin" type="button">Login</button>
         <button id="btnRegister" type="button" class="btn-secondary">Registrieren</button>
-        
       </div>
+
+      <p id="authStatus" class="status" aria-live="polite"></p>
     </section>
 
     <!-- UPLOAD -->
@@ -45,46 +47,40 @@
       <h2>Foto hochladen</h2>
 
       <input type="file" id="fileInput" accept="image/*">
+
       <div class="btn-row">
         <button id="btnUpload" type="button">Upload</button>
-        <button id="btnLogout" type="button" class="btn-secondary">Logout</button>        
+        <button id="btnLogout" type="button" class="btn-secondary">Logout</button>
       </div>
 
       <p id="uploadStatus" class="status" aria-live="polite"></p>
 
-<h3>Freigabe erstellen</h3>
+      <h2>Freigabe</h2>
 
-<div class="share-bar">
-  <label class="share-label">
-    Ablauf:
-    <select id="shareExpiry">
-      <option value="1">1 Tag</option>
-      <option value="7" selected>7 Tage</option>
-      <option value="30">30 Tage</option>
-    </select>
-  </label>
+      <div class="share-box">
+        <button type="button" id="btnShareAll">Freigabelink erstellen</button>
 
-  <button id="btnShare" type="button" class="btn btn-secondary">
-    Link für Auswahl erstellen
-  </button>
+        <div id="shareResult" class="hidden" style="margin-top:0.75rem;">
+          <label for="shareLink" class="sr-only">Freigabelink</label>
+
+          <div class="btn-row">
+            <input id="shareLink" type="text" readonly>
+            <button type="button" id="btnCopyShare" class="btn-secondary">Kopieren</button>
+          </div>
+
+          <p id="shareHint" class="hint" style="margin:0.5rem 0 0;"></p>
+        </div>
       </div>
 
-      <p id="shareLinkOut" class="status" aria-live="polite"></p>
-
-      <h3>Meine Fotos</h3>
-      <div id="gallery"></div>
-
-
-      <h3>Meine Fotos</h3>
+      <h2>Meine Fotos</h2>
       <div id="gallery"></div>
     </section>
-    
+
   </main>
 
   <script src="https://unpkg.com/pocketbase/dist/pocketbase.umd.js"></script>
- 
   <script type="module" src="/demos/fotosharing/fotosharing.js"></script>
-
 </body>
 </html>
+
 
