Fotosharing - Freigabe ausbauen

--- a/demos/fotosharing/share.html
+++ b/demos/fotosharing/share.html
@@ -13,55 +13,24 @@
 
 <main class="container">
   <h1>📸 Freigabe</h1>
-  <p class="hint">Diese Seite ist eine Demo-Freigabe (aktuell: zeigt alle Bilder).</p>
 
-  <div id="sharedGallery"></div>
+  <!-- Status/Fehler/OK -->
+  <p id="shareStatus" class="status" aria-live="polite"></p>
 
-  <p class="demo-note">
-    Hinweis: Später wird diese Ansicht nur ausgewählte Bilder und ein Ablaufdatum unterstützen.
-  </p>
+  <!-- optional: Ablaufdatum -->
+  <p id="shareMeta" class="hint"></p>
+
+  <!-- hier rendert share.js die Fotos -->
+  <div id="shareGallery"></div>
 
   <div class="back-wrapper">
     <a class="back-button" href="/demos/fotosharing/projekt-fotosharing-demo.html">← Zurück</a>
   </div>
 </main>
 
-<script src="https://unpkg.com/pocketbase/dist/pocketbase.umd.js"></script>
-<script type="module">
-  const pb = new PocketBase("/api");
-
-  const gallery = document.getElementById("sharedGallery");
-
-  function getParam(name) {
-    return new URLSearchParams(window.location.search).get(name);
-  }
-
-  async function loadAll() {
-    gallery.innerHTML = "";
-    const photos = await pb.collection("photos").getFullList({ sort: "-created" });
-
-    if (!photos.length) {
-      gallery.innerHTML = "<p class='hint'>Keine Bilder vorhanden.</p>";
-      return;
-    }
-
-    photos.forEach(p => {
-      const img = document.createElement("img");
-      img.src = pb.files.getURL(p, p.image);
-      img.loading = "lazy";
-      gallery.appendChild(img);
-    });
-  }
-
-  // jetzt: all=1 -> alles laden
-  if (getParam("all") === "1") {
-    loadAll().catch(() => {
-      gallery.innerHTML = "<p class='hint'>Fehler beim Laden. Bitte später erneut versuchen.</p>";
-    });
-  } else {
-    gallery.innerHTML = "<p class='hint'>Ungültiger Link.</p>";
-  }
-</script>
+<!-- PocketBase brauchst du für share.js NICHT mehr -->
+<script type="module" src="/demos/fotosharing/share.js"></script>
 
 </body>
 </html>
+
