E-Mail-Adresse geändert

--- a/datenschutz.html
+++ b/datenschutz.html
@@ -26,7 +26,7 @@
       <p>
         <strong>Katrin Mack</strong><br>
         E-Mail:
-        <a href="mailto:woehrle.katrin@gmail.com">woehrle.katrin@gmail.com</a>
+        <a href="mailto:in.finn.it.service@gmail.com">in.finn.it.service@gmail.com</a>
       </p>
       <p>
         Weitere Kontaktdaten finden Sie im
