--- a/impressum.html
+++ b/impressum.html
@@ -27,7 +27,7 @@
 
       <p>
         E-Mail:
-        <a href="mailto:woehrle.katrin@gmail.com">woehrle.katrin@gmail.com</a>
+        <a href="mailto:in.finn.it.service@gmail.com">in.finn.it.service@gmail.com</a>
       </p>
 
       <div class="legal-back">
