Update email + fotosharing Änderungen

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             </p>
 
             <ul class="project-highlights">
-              <li><strong>Problem:</strong> Aufwendige Abstimmung, viele Einzelanfragen, organisatorischer Stress</li>
+              <li><strong>Problem:</strong> Aufwändige Abstimmung, viele Einzelanfragen, organisatorischer Stress</li>
               <li><strong>Lösung:</strong> Statusbasierte Verfügbarkeiten statt Kommunikation, klar & ruhig dargestellt</li>
               <li><strong>Zielgruppe:</strong> Eltern, die spontane Spielverabredungen koordinieren wollen</li>
               <li><strong>Fokus:</strong> Übersicht, Datensparsamkeit & Vertrauen</li>
