--- a/demos/fotosharing/projekt-fotosharing-demo.html
+++ b/demos/fotosharing/projekt-fotosharing-demo.html
@@ -72,6 +72,21 @@
         </div>
       </div>
 
+      <!-- 📌 Share-Verwaltung -->
+      <section id="sharesSection" style="margin-top:1rem;">
+        <h3>Meine Freigaben</h3>
+
+        <div class="btn-row">
+          <button id="btnReloadShares" type="button" class="btn-secondary">Aktualisieren</button>
+        </div>
+
+        <div id="sharesList">
+          <p class="hint">Noch keine Freigaben.</p>
+        </div>
+
+        <p id="sharesStatus" class="status" aria-live="polite"></p>
+      </section>
+
       <h2>Meine Fotos</h2>
       <div id="gallery"></div>
     </section>
@@ -82,5 +97,6 @@
   <script type="module" src="/demos/fotosharing/fotosharing.js"></script>
 </body>
 </html>
+
 
 
