--- a/demos/fotosharing/projekt-fotosharing-demo.html
+++ b/demos/fotosharing/projekt-fotosharing-demo.html
@@ -55,23 +55,6 @@
 
       <p id="uploadStatus" class="status" aria-live="polite"></p>
 
-      <h2>Freigabe</h2>
-
-      <div class="share-box">
-        <button type="button" id="btnShareAll">Freigabelink erstellen</button>
-
-        <div id="shareResult" class="hidden" style="margin-top:0.75rem;">
-          <label for="shareLink" class="sr-only">Freigabelink</label>
-
-          <div class="btn-row">
-            <input id="shareLink" type="text" readonly>
-            <button type="button" id="btnCopyShare" class="btn-secondary">Kopieren</button>
-          </div>
-
-          <p id="shareHint" class="hint" style="margin:0.5rem 0 0;"></p>
-        </div>
-      </div>
-
       <!-- 📌 Share-Verwaltung -->
       <section id="sharesSection" style="margin-top:1rem;">
         <h3>Meine Freigaben</h3>
@@ -90,18 +73,33 @@
       <h2>Meine Fotos</h2>
 
       <div class="btn-row" style="align-items:center; gap:0.75rem; flex-wrap:wrap;">
-        <button id="btnShareSelected" type="button" class="btn-secondary" disabled>
-          Ausgewählte teilen
+        <button id="btnShareSelected" type="button" disabled>
+          Freigabelink erstellen
         </button>
 
         <button id="btnClearSelection" type="button" class="btn-secondary" disabled>
           Auswahl aufheben
         </button>
 
-        <span id="selectionInfo" class="hint" style="margin-left:auto;">0 ausgewählt</span>
+        <span id="selectionInfo" class="hint" style="margin-left:auto;">
+          0 ausgewählt
+        </span>
+      </div>
+
+      <!-- 👇 HIER kommt das rein -->
+      <div id="shareResult" class="hidden" style="margin-top:0.75rem;">
+        <label for="shareLink" class="sr-only">Freigabelink</label>
+
+        <div class="btn-row">
+          <input id="shareLink" type="text" readonly>
+          <button type="button" id="btnCopyShare" class="btn-secondary">Kopieren</button>
+        </div>
+
+        <p id="shareHint" class="hint" style="margin:0.5rem 0 0;"></p>
       </div>
 
       <div id="gallery"></div>
+
 
     </section>
 
