Freigabe Zeit anpassbar

--- a/demos/fotosharing/projekt-fotosharing-demo.html
+++ b/demos/fotosharing/projekt-fotosharing-demo.html
@@ -83,6 +83,13 @@
           Freigabelink erstellen
         </button>
 
+        <label for="expiresDays" class="sr-only">Gültigkeit</label>
+          <select id="expiresDays" class="btn-secondary">
+            <option value="1">1 Tag</option>
+            <option value="7" selected>7 Tage</option>
+            <option value="30">30 Tage</option>
+          </select>
+
         <button id="btnClearSelection" type="button" class="btn-secondary" disabled>
           Auswahl aufheben
         </button>
