Bilder begrenzen, automatisch löschen

--- a/demos/fotosharing/projekt-fotosharing-demo.html
+++ b/demos/fotosharing/projekt-fotosharing-demo.html
@@ -22,7 +22,7 @@
       <a class="demo-back" href="/#portfolio">← Zurück zu den Projekten</a>
     </nav>
 
-    <h1>📸 Foto-Sharing Demo</h1>
+    <h1>📸 Foto-Sharing Demo</h1>    
 
     <!-- LOGIN / REGISTER -->
     <section id="authSection">
@@ -54,6 +54,7 @@
       </div>
 
       <p id="uploadStatus" class="status" aria-live="polite"></p>
+      <p class="hint">Demo-Limit: maximal 20 Fotos pro Benutzer. Uploads werden nach 14 Tagen automatisch gelöscht.</p>      
 
       <!-- 📌 Share-Verwaltung -->
       <details id="sharesSection" style="margin-top:1rem;">
